<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="greg@todo.todo">greg</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>topic_tools</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <depend>uav_interfaces</depend>
  <!-- <exec_depend>uav_interfaces</exec_depend> -->

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>
  <exec_depend>rqt_publisher</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
